force-app/main/default/objects/APIConfig__mdt/APIConfig__mdt.object-meta.xml
<CustomObject>
    <description>Naver, Google 등 API Key 관리</description>
    <label>API Config</label>
    <pluralLabel>API Configs</pluralLabel>
</CustomObject>