force-app/main/default/objects/APIConfig__mdt/fields/Active_is__c.field-meta.xml
<CustomField>
    <fullName>Active_is__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>