force-app/main/default/objects/APIConfig__mdt/fields/APISecret__c.field-meta.xml
<CustomField>
    <fullName>APISecret__c</fullName>
    <label>API Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>