force-app/main/default/objects/APIConfig__mdt/fields/BaseURL__c.field-meta.xml
<CustomField>
    <fullName>BaseURL__c</fullName>
    <label>Base URL</label>
    <type>Url</type>
</CustomField>